--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "new-start-gulp",
+  "name": "landbeeplant",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alienat3d/landbeeplant.git"
+  },
   "author": "Al Tsaplin",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/alienat3d/landbeeplant/issues"
+  },
+  "homepage": "https://github.com/alienat3d/landbeeplant#readme",
   "devDependencies": {
-    "@fancyapps/ui": "^4.0.0-beta.0",
-    "browser-sync": "^2.26.14",
-    "del": "^6.0.0",
+    "browser-sync": "^3.0.2",
+    "del": "^6.1.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-sass": "^4.1.0",
+    "gulp-imagemin": "7.1",
+    "gulp-sass": "^5.1.0",
     "gulp-uglify": "^3.0.2",
-    "ion-rangeslider": "^2.3.1",
-    "jquery": "^3.6.0",
-    "jquery-form-styler": "^2.0.2",
-    "rateyo": "^2.3.2",
-    "slick-carousel": "^1.8.1"
-  },
-  "dependencies": {}
+    "sass": "^1.69.7",
+    "normalize.css": "^8.0.1"
+  }
 }
